// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StreetNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="street_name"
      >
        Ulica
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Ulica"
          name="street_name"
          placeholder="Ulica"
          value="#$Street Name"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<StreetNameField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="testId"
  label="Ulica"
  name="street_name"
  placeholder="Ulica"
  value=""
/>
`;

exports[`<StreetNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="street_name"
      >
        HouseNumber*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="HouseNumber"
          name="street_name"
          placeholder="Ulica*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<StreetNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="street_name"
      >
        Street
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="testId"
          label="Street"
          name="street_name"
          placeholder="Ulica"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
